Fix .bio-image strech on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -223,8 +223,8 @@ html {
 }
 
 .bio-image {
-  max-width:100%;
-  max-height:100%;
+  width:100%;
+  height:100%;
   padding: 1rem;
 }
 
